# bench_hmac_blake3_and_hmac_sha256

./: Cargo.toml  Readme.md
benches/: par_and_seq_hash_blake3.rs  par_and_seq_hash_sha256.rs  par_hash_blake3.rs  par_hash_sha256.rs  par_hmac.rs  par_or_seq_hmac.rs  seq_hash_blake3.rs  seq_hash_sha256.rs  seq_hmac.rs
examples/: hmac.rs  par_hmac_string_1_to_4_xor.rs  seq_hmac_string_1_to_4_xor.rs
src/: lib.rs  main.rs
