[package]
name = "test_pal_hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
crypto-bigint = "0.4.9"
fixedbitset = "0.4.2"
hmac = "0.12.1"
rayon = "1.5.3"
ring = "0.17.0-alpha.11"
sha2 = {version="0.10.6",features = ["asm"]}
rand = "0.8.5"
hex = "0.4.3"

[dev-dependencies]
hex-literal = "0.3.4"
criterion = { version = "0.4.0", features = ['real_blackbox', "html_reports"] }

[[bench]]
name = "par_or_seq_hmac"
harness = false

[[bench]]
name = "par_hmac"
harness = false

[[bench]]
name = "seq_hmac"
harness = false

[profile.bench]
debug = true
lto=true
codegen-units = 1

[profile.release]
debug=true
lto=true
codegen-units = 1